fix: Fix map UI alignment issue
- Fixed the issue of no map data message not being centered
- Revised the display message for no data

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,17 +4,19 @@
 
 :root {
   --foreground-rgb: rgb(0, 0, 0);
+  --background-rgb: rgb(241, 245, 246);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: rgb(255, 255, 255);
+    --background-rgb: rgb(12, 12, 12);
   }
 }
 
 body {
   color: var(--foreground-rgb);
-  background-color: rgb(241, 245, 246);
+  background-color: var(--background-rgb);
   list-style: none;
 }
 
